# ToDoList

./: .gitignore  CMakeLists.txt  README.md  app.rc
docs/: core-dev-dependencies.md  development-plan.md  功能测试文档.md  思路.md  构建问题.md
openspec/changes/todolist-app/: design.md  proposal.md  tasks.md
openspec/changes/todolist-app/specs/backup-system/: spec.md
openspec/changes/todolist-app/specs/data-import-export/: spec.md
openspec/changes/todolist-app/specs/file-association/: spec.md
openspec/changes/todolist-app/specs/logging-system/: spec.md
openspec/changes/todolist-app/specs/notification-system/: spec.md
openspec/changes/todolist-app/specs/recycle-bin/: spec.md
openspec/changes/todolist-app/specs/settings-system/: spec.md
openspec/changes/todolist-app/specs/sidebar-grouping/: spec.md
openspec/changes/todolist-app/specs/task-dependencies/: spec.md
openspec/changes/todolist-app/specs/task-hierarchy/: spec.md
openspec/changes/todolist-app/specs/task-management/: spec.md
openspec/changes/todolist-app/specs/task-search-filter/: spec.md
openspec/changes/todolist-app/specs/theme-system/: spec.md
openspec/changes/ui-beautification/: .openspec.yaml  design.md  proposal.md  tasks.md
resources/: README.md  icons.qrc  resources.qrc  styles.qrc
resources/styles/: common.qss  dark.qss  light.qss
src/: app.cpp  app.h  main.cpp
src/app/: app.cpp  app.h
src/controllers/: backupmanager.cpp  backupmanager.h  database.cpp  database.h  notificationmanager.cpp  notificationmanager.h  task_controller.cpp  task_controller.h
src/database/: database_manager.cpp  database_manager.h
src/models/: folder.cpp  folder.h  notification.cpp  notification.h  tag.cpp  tag.h  task.cpp  task.h  task_search_filters.h  task_step.cpp  task_step.h  taskmodel.cpp  taskmodel.h
src/utils/: date_utils.cpp  date_utils.h  file_utils.cpp  file_utils.h  icon_utils.cpp  icon_utils.h  logger.cpp  logger.h  shortcut_keys.h  style_utils.h  theme_manager.cpp  theme_manager.h  theme_utils.cpp  theme_utils.h
src/views/: content_area.cpp  content_area.h  empty_state_widget.cpp  empty_state_widget.h  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  notificationpanel.cpp  notificationpanel.h  search_widget.cpp  search_widget.h  settingsdialog.cpp  settingsdialog.h  sidebar.cpp  sidebar.h  task_card_widget.cpp  task_card_widget.h  task_detail_widget.cpp  task_detail_widget.h  task_dialog.cpp  task_dialog.h  task_list_widget.cpp  task_list_widget.h  task_tree.cpp  task_tree.h
